change to redirect

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=zhuliangyu.github.io/portfolio/" />
+
     <title>Document</title>
 </head>
 <body>
