redirect to my portfolio

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=zhuliangyu.github.io/portfolio/" />
+    <meta http-equiv="refresh" content="0; url=https://zhuliangyu.github.io/portfolio/"/>
 
     <title>Document</title>
 </head>
 <body>
-   
-   It is Ricky Zhu' home page.
-    
+
+<p>It is Ricky Zhu' home page.</p>
+<p>Please give me a few seconds to redirect to the target page.
+</p>
+
 </body>
 </html>
